# wasm_ghpages

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  leptos-wasm_github-pages-5d199c71e267f026.js  leptos-wasm_github-pages-5d199c71e267f026_bg.wasm  tailwind-44f9c621743a569.css
.github/workflows/: deploy.yml
public/: tailwind.css
src/: lib.rs  main.rs
src/pages/: home.rs  not_found.rs
